public interface ISaldiri {  
    public int tekme();
    public int yumruk();
} 
    

